Fixed the typos

--- a/Hello.html
+++ b/Hello.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     
-<h1>Helyo, and welcome to my pactice html document</h1>
+<h1>Hello, and welcome to my practice html document</h1>
+
 
 <div>
 
