--- a/Hello.html
+++ b/Hello.html
@@ -10,6 +10,8 @@
     
 <h1>Hello, and welcome to my practice html document</h1>
 
+<p>Thid is a practice repository <p>
+    
 <div>
 
 <strong id="hulk">Find errors in html text and fix :)</strong>
